--- a/TFG.html
+++ b/TFG.html
@@ -40,7 +40,7 @@
 
 
 	var p = 6, q = 4, 		// parámetros p y q
-			nLayers = 2;			// Capas a dibujar
+	nLayers = 2;			// Capas a dibujar
 
 
 	var										//// Create ReflectEdgeBisector
@@ -145,82 +145,84 @@
 	//**********************************************************************
 
 	// Esta función no se utiliza ahora mismo, las definiciones están hechas de forma global.
+		
+	//************************************************************************
 
-	function inicialice( p, q ){
-	/*canv_doc = elementoHTML("canvas1");
+			function inicialice( p, q ){
+			/*canv_doc = elementoHTML("canvas1");
 
-	ctx_doc = canv_doc.getContext("2d");
+			ctx_doc = canv_doc.getContext("2d");
 
-	if (!ctx_doc){
-		alert("error: la llamada a canv_doc.getContext(\"2d\") no está soportada o no ha funcionado.");
-		exit();
-		}
+			if (!ctx_doc){
+				alert("error: la llamada a canv_doc.getContext(\"2d\") no está soportada o no ha funcionado.");
+				exit();
+				}
 
-	tcx = canv_doc.width,		/// Tamaño del canvas en la X
-	tcy = canv_doc.height;		/// Tamaño del canvas en la Y
-
-
-	canv_aux = document.createElement('canvas');
-
-	if (!canv_aux){
-		alert("error: la llamada a document.createElement('canvas') no está soportada o no ha funcionado.");
-		exit();
-		}
-
-	canv_aux.width = tcx;
-	canv_aux.height = tcy;
-
-	ctx_aux = canv_aux.getContext('2d');
-
-	if (!canv_aux){
-		alert("error: la llamada a canv_aux.getContext('2d') no está soportada o no ha funcionado.");
-		exit();
-		}
-
-	// Se dibuja en el canvas auxiliar.
-	ctx = ctx_aux;*/
+			tcx = canv_doc.width,		/// Tamaño del canvas en la X
+			tcy = canv_doc.height;		/// Tamaño del canvas en la Y
 
 
+			canv_aux = document.createElement('canvas');
 
-	var										//// Create ReflectEdgeBisector
-	RB1 = [1,0,0],
-	RB2 = [0,-1,0],
-	RB3 = [0,0,1];
+			if (!canv_aux){
+				alert("error: la llamada a document.createElement('canvas') no está soportada o no ha funcionado.");
+				exit();
+				}
 
+			canv_aux.width = tcx;
+			canv_aux.height = tcy;
 
-	ReflectEdgeBisector = [RB1,RB2,RB3];	//// End creation
+			ctx_aux = canv_aux.getContext('2d');
+
+			if (!canv_aux){
+				alert("error: la llamada a canv_aux.getContext('2d') no está soportada o no ha funcionado.");
+				exit();
+				}
+
+			// Se dibuja en el canvas auxiliar.
+			ctx = ctx_aux;*/
 
 
 
-	cosh_b = Math.cos(Math.PI / q) / Math.sin(Math.PI / p);		//// Create ReflectPgonEdge
-
-	var
-	cosh_2b = 2 * cosh_b * cosh_b - 1,
-	sinh_2b = Math.sqrt(cosh_b * cosh_b - 1),
-	RPE1 = [-cosh_2b, 0, sinh_2b],
-	RPE2 = [0, 1, 0],
-	RPE3 = [-sinh_2b, 0, cosh_2b];
-
-	ReflectPgonEdge = [RPE1, RPE2, RPE3];						//// End creation
-
-	//console.log("cos2 = " + cosh_2b);
-	//console.log("sin = " + sinh_2b);
-	//console.log("cosh_b: " + cosh_b);
+			var										//// Create ReflectEdgeBisector
+			RB1 = [1,0,0],
+			RB2 = [0,-1,0],
+			RB3 = [0,0,1];
 
 
-	var																							/// Create ReflectHypotenuse
-	RH1 = [Math.cos(2 / p), Math.sin(2 / p), 0],
-	RH2 = [Math.sin(2 / p), -Math.cos(2 / p), 0],
-	RH3 = [0, 0, 1];
-
-	ReflectHypotenuse = [RH1, RH2, RH3];						/// End creation
+			ReflectEdgeBisector = [RB1,RB2,RB3];	//// End creation
 
 
-	RotateP = matrixproduct(ReflectEdgeBisector, ReflectHypotenuse);
-	RotateQ = matrixproduct(ReflectHypotenuse, ReflectPgonEdge);
-	RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);
 
-	}
+			cosh_b = Math.cos(Math.PI / q) / Math.sin(Math.PI / p);		//// Create ReflectPgonEdge
+
+			var
+			cosh_2b = 2 * cosh_b * cosh_b - 1,
+			sinh_2b = Math.sqrt(cosh_b * cosh_b - 1),
+			RPE1 = [-cosh_2b, 0, sinh_2b],
+			RPE2 = [0, 1, 0],
+			RPE3 = [-sinh_2b, 0, cosh_2b];
+
+			ReflectPgonEdge = [RPE1, RPE2, RPE3];						//// End creation
+
+			//console.log("cos2 = " + cosh_2b);
+			//console.log("sin = " + sinh_2b);
+			//console.log("cosh_b: " + cosh_b);
+
+
+			var																							/// Create ReflectHypotenuse
+			RH1 = [Math.cos(2 / p), Math.sin(2 / p), 0],
+			RH2 = [Math.sin(2 / p), -Math.cos(2 / p), 0],
+			RH3 = [0, 0, 1];
+
+			ReflectHypotenuse = [RH1, RH2, RH3];						/// End creation
+
+
+			RotateP = matrixproduct(ReflectEdgeBisector, ReflectHypotenuse);
+			RotateQ = matrixproduct(ReflectHypotenuse, ReflectPgonEdge);
+			RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);
+
+			}
 
 	//*******************************************************************************************
 
@@ -231,7 +233,7 @@
 
 		for (i = 0; i < Action.length /*nPgonActions*/; i++){
 			console.log("iteracion: " + i);
-			if (Action[i] != "Black"){													// Ahora mismo el único color que hay es Negro
+			if (Action[i] != "Black"){				/// Ahora mismo solo hay negro											// Ahora mismo el único color que hay es Negro
 				SumSquare = X[i] * X[i] + Y[i] * Y[i];
 
 				var Z = [[2 * X[i] / (1 - SumSquare)],
@@ -319,10 +321,10 @@
 
 			RotateCenter = matrixproduct(RotateP, RotateCenter);
 
-			if (i < ExposedEdges - 1)									//// El -1 es para compensar que la i empieza en 0
+			if (i < ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
 				PgonsPerVertex = q - 3;
 
-			else if (i == ExposedEdges - 1)						//// El -1 es para compensar que la i empieza en 0
+			else if (i == ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
 				PgonsPerVertex = q - 4;
 
 			RotateVertex = matrixproduct(RotateQ, RotateP);
@@ -343,51 +345,52 @@
 	//*******************************************************************************************
 	// Esta función es para probar pintar normal, funciona bien
 	// No se usa ahora mismo
+	//*******************************************************************************************
 
-	function draw(){
-		var canvas = document.getElementById('canvas1');
-		var prueba = ["Move", "Draw1", "Draw2", "Black", "Move1", "Draw3", "Red"];
+		function draw(){
+			var canvas = document.getElementById('canvas1');
+			var prueba = ["Move", "Draw1", "Draw2", "Black", "Move1", "Draw3", "Red"];
 
-		if(canvas.getContext){
-			var ctx = canvas.getContext('2d');
+			if(canvas.getContext){
+				var ctx = canvas.getContext('2d');
 
-			ctx.beginPath();
-			for (var i = 0; i < prueba.length; i++){
-				switch(prueba[i]){														////
-					case "Move":
-						ctx.moveTo(350, 350);
-						break;
+				ctx.beginPath();
+				for (var i = 0; i < prueba.length; i++){
+					switch(prueba[i]){														////
+						case "Move":
+							ctx.moveTo(350, 350);
+							break;
 
-					case "Move1":
-						ctx.moveTo(600, 600);
-						break;
+						case "Move1":
+							ctx.moveTo(600, 600);
+							break;
 
-					case "Draw1":
-						ctx.lineTo(100, 200);
-						break;
+						case "Draw1":
+							ctx.lineTo(100, 200);
+							break;
 
-					case "Black":
-						ctx.strokeStyle = "Black";		//Pinta los bordes del polígono
-						ctx.stroke();									/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
-						break;
+						case "Black":
+							ctx.strokeStyle = "Black";		//Pinta los bordes del polígono
+							ctx.stroke();									/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
+							break;
 
-					case "Red":
-						ctx.strokeStyle = "Red";		//Pinta los bordes del polígono
-						ctx.stroke();								/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
-						break;
+						case "Red":
+							ctx.strokeStyle = "Red";		//Pinta los bordes del polígono
+							ctx.stroke();								/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
+							break;
 
-					case "Draw2":
-						ctx.lineTo(200, 200);
-						break;
+						case "Draw2":
+							ctx.lineTo(200, 200);
+							break;
 
-					case "Draw3":
-						ctx.lineTo(650, 600);
-						break;
+						case "Draw3":
+							ctx.lineTo(650, 600);
+							break;
+					}
 				}
 			}
-		}
 
-	}
+		}
 
 	//draw();
 
@@ -396,27 +399,27 @@
 	 ///
 
 	 var puntos = {x0: 2.7, y0: -1.3, x1: 4.5, y1: -.45,
-		 						 x2: 5.4, y2: 2, x3: 4.9, y3: 1.75,
-							 	 x4: 2.49, y4: 1.85, x5: 2.4, y5:.8},
-			 centro = {x: 600, y: 350},
-			 escala = 20;
+		       x2: 5.4, y2: 2, x3: 4.9, y3: 1.75,
+		       x4: 2.49, y4: 1.85, x5: 2.4, y5:.8},
+		centro = {x: 600, y: 350},
+		escala = 20;
 
 // Enlace de Geogebra para ver los puntos originales
 // https://www.geogebra.org/geometry/wcx98k6u
 
 		// Los vectores X e Y toman los puntos que están definidos en Geogebra, les aplica la escala y los traslada al centro
  	 var X = [puntos.x0 * escala + centro.x, puntos.x1 * escala + centro.x,
-		 				puntos.x2 * escala + centro.x, puntos.x3 * escala + centro.x,
-						puntos.x4 * escala + centro.x, puntos.x5 * escala + centro.x],
- 			 Y = [puntos.y0 * escala + centro.y, puntos.y1 * escala + centro.y,
-		 				puntos.y2 * escala + centro.y, puntos.y3 * escala + centro.y,
-						puntos.y4 * escala + centro.y, puntos.y5 * escala + centro.y],
+		 puntos.x2 * escala + centro.x, puntos.x3 * escala + centro.x,
+		 puntos.x4 * escala + centro.x, puntos.x5 * escala + centro.x],
+ 	     Y = [puntos.y0 * escala + centro.y, puntos.y1 * escala + centro.y,
+		 puntos.y2 * escala + centro.y, puntos.y3 * escala + centro.y,
+		 puntos.y4 * escala + centro.y, puntos.y5 * escala + centro.y],
  	 Action = ["Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 						 "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 						 "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 						 "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 						 "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 						 "Move", "Draw", "Draw", "Draw", "Move", "Draw", "Black"];
+ 		"Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		"Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		"Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		"Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		"Move", "Draw", "Draw", "Draw", "Move", "Draw", "Black"];
 
 	 /// Añado las rotaciones a los vectores X e Y
 	 for (var i = 1; i < p; i++){
@@ -451,7 +454,7 @@
 					nLayers - 1,
 					"Vertex");
 
-			RotateVertex = matrixproduct(RotateQ, RotateVertex);
+				RotateVertex = matrixproduct(RotateQ, RotateVertex);
 		}
 	}
 
