Corrección de un comentario

--- a/TFG.html
+++ b/TFG.html
@@ -228,7 +228,7 @@
 					[2 * Y[i] / (1 - SumSquare)],
 					[(1 + SumSquare) / (1 - SumSquare)]];
 
-				Z = matrixproduct(transformation, Z);				/// Desde dejado del if (Action[i] != "Black") está en el artículo de 1981*/
+				Z = matrixproduct(transformation, Z);				/// Desde debajo del if (Action[i] != "Black") está en el artículo de 1981*/
 
 				let coordinates = [[X[i]], [Y[i]], [0]];							///
 				let Z = matrixproduct(transformation, coordinates);		/// Estas dos líneas están en el artículo de 1986
