--- a/TFG.html
+++ b/TFG.html
@@ -39,37 +39,79 @@
 	RotateVertex;
 
 	var p = 6, q = 4, 		// parámetros p y q
-	nLayers = 2;			// Capas a dibujar
+	nLayers = 1;			// Capas a dibujar
 
-	var										//// Create ReflectEdgeBisector
+	var				//// Create ReflectEdgeBisector
 	RB1 = [1,0,0],
 	RB2 = [0,-1,0],
 	RB3 = [0,0,1];
 
-	ReflectEdgeBisector = [RB1, RB2, RB3];	//// End creation
+	ReflectEdgeBisector = [RB1, RB2, RB3];	//// End creation	/// ReflectQ para 1986
 
 	cosh_b = Math.cos(Math.PI / q) / Math.sin(Math.PI / p);		//// Create ReflectPgonEdge
 
 	var
 	cosh_2b = 2 * cosh_b * cosh_b - 1,
-	sinh_2b = Math.sqrt(cosh_b * cosh_b - 1),
+	sinh_2b = Math.sqrt(cosh_2b * cosh_2b - 1),
 	RPE1 = [-cosh_2b, 0, sinh_2b],
 	RPE2 = [0, 1, 0],
 	RPE3 = [-sinh_2b, 0, cosh_2b];
 
-	ReflectPgonEdge = [RPE1, RPE2, RPE3];						//// End creation
+	ReflectPgonEdge = [RPE1, RPE2, RPE3];						//// End creation	/// ReflectP para el 1986
 
-	var																							/// Create ReflectHypotenuse
-	RH1 = [Math.cos(2 / p), Math.sin(2 / p), 0],
-	RH2 = [Math.sin(2 / p), -Math.cos(2 / p), 0],
+	var										/// Create ReflectHypotenuse
+	RH1 = [Math.cos(2 * Math.PI / p), Math.sin(2 * Math.PI / p), 0],
+	RH2 = [Math.sin(2 * Math.PI / p), - Math.cos(2 * Math.PI / p), 0],
 	RH3 = [0, 0, 1];
 
-	ReflectHypotenuse = [RH1, RH2, RH3];						/// End creation
+	ReflectHypotenuse = [RH1, RH2, RH3];						/// End creation	// Reflect2 para 1986
 
 
-	RotateP = matrixproduct(ReflectEdgeBisector, ReflectHypotenuse);
-	RotateQ = matrixproduct(ReflectHypotenuse, ReflectPgonEdge);
-	RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);
+	RotateP = matrixproduct(ReflectHypotenuse, ReflectEdgeBisector);				// 2 * Q
+	RotateQ = matrixproduct(ReflectPgonEdge, ReflectHypotenuse);				// P * 2
+	//RotateEdge = matrixproduct(ReflectPgonEdge, ReflectEdgeBisector);		// RotateEdge 1981 (este no está en 1986)
+
+
+
+	 ///
+	 // Definición de los vectores X, Y y Action
+	 ///
+
+	 var puntos = {x0: 2.7, y0: -1.3, x1: 4.5, y1: -0.45,
+		       x2: 5.4, y2: 2, x3: 4.9, y3: 1.75,
+		       x4: 2.49, y4: 1.85, x5: 2.4, y5:.8},
+	    centro = {x: 600, y: 350},
+	    centro0 = {x: 0, y: 0},				/// Centrar las rotaciones en el centro
+	    escala = 20;
+
+// Enlace de Geogebra para ver los puntos originales
+// https://www.geogebra.org/geometry/wcx98k6u
+
+		// Los vectores X e Y toman los puntos que están definidos en Geogebra, les aplica la escala y los traslada al centro
+ 	 var /*X = [linealTransformation(puntos.x0, escala, centro.x), linealTransformation(puntos.x1, escala, centro.x),
+		 				linealTransformation(puntos.x2, escala, centro.x), linealTransformation(puntos.x3, escala, centro.x),
+		 				linealTransformation(puntos.x4, escala, centro.x), linealTransformation(puntos.x5, escala, centro.x)],
+ 	     Y = [linealTransformation(puntos.y0, escala, centro.y), linealTransformation(puntos.y1, escala, centro.y),
+		 	 			linealTransformation(puntos.y2, escala, centro.y), linealTransformation(puntos.y3, escala, centro.y),
+		 				linealTransformation(puntos.y4, escala, centro.y), linealTransformation(puntos.y5, escala, centro.y)],*/
+ 	 Action = ["Move", "Draw", "Draw", "Draw", "Move", "Draw" ],
+	 X = [puntos.x0, puntos.x1, puntos.x2, puntos.x3, puntos.x4, puntos.x5],
+	 Y = [puntos.y0, puntos.y1, puntos.y2, puntos.y3, puntos.y4, puntos.y5];
+
+	  // es mejor que definir 'Action' siempre con la misma longitud que 'X' e 'Y', y hacer siempre tres push paralelos en las tres
+
+ 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw",
+ 		//   "Move", "Draw", "Draw", "Draw", "Move", "Draw", "Black"];
+
+	//**********************************************************************
+	// Hace una transformacion lineal
+
+	function linealTransformation(punto, escala, centro){
+		return punto * escala + centro;
+	}
 
 	//**********************************************************************
 
@@ -130,7 +172,7 @@
 		   	exit() ;
 			}
 		return elem ;
-}
+	}
 
 	//**********************************************************************
 
@@ -172,7 +214,7 @@
 
 
 
-	var										//// Create ReflectEdgeBisector
+	var							//// Create ReflectEdgeBisector
 	RB1 = [1,0,0],
 	RB2 = [0,-1,0],
 	RB3 = [0,0,1];
@@ -198,7 +240,7 @@
 	//console.log("cosh_b: " + cosh_b);
 
 
-	var																							/// Create ReflectHypotenuse
+	var									/// Create ReflectHypotenuse
 	RH1 = [Math.cos(2 / p), Math.sin(2 / p), 0],
 	RH2 = [Math.sin(2 / p), -Math.cos(2 / p), 0],
 	RH3 = [0, 0, 1];
@@ -220,58 +262,69 @@
 		Tx, Ty;
 
 		for (i = 0; i < Action.length /*nPgonActions*/; i++){
-			console.log("iteracion: " + i);
-			if (Action[i] != "Black"){													// Ahora mismo el único color que hay es Negro
-			/*	SumSquare = X[i] * X[i] + Y[i] * Y[i];
+			//console.log("iteracion: " + i);
+			if (Action[i] != "Black"){				// Ahora mismo el único color que hay es Negro
+				/*SumSquare = X[i] * X[i] + Y[i] * Y[i];
 
-				var Z = [[2 * X[i] / (1 - SumSquare)],
+				let Z = [[2 * X[i] / (1 - SumSquare)],
 					[2 * Y[i] / (1 - SumSquare)],
 					[(1 + SumSquare) / (1 - SumSquare)]];
 
-				Z = matrixproduct(transformation, Z);				/// Desde debajo del if (Action[i] != "Black") está en el artículo de 1981*/
+				Z = matrixproduct(transformation, Z);			/// Desde debajo del if (Action[i] != "Black") está en el artículo de 1981*/
 
-				let coordinates = [[X[i]], [Y[i]], [0]];							///
+				let coordinates = [[X[i]], [Y[i]], [0]];
 				let Z = matrixproduct(transformation, coordinates);		/// Estas dos líneas están en el artículo de 1986
 
 				Tx = Z[0][0] / (1 + Z[2][0]);
 				Ty = Z[1][0] / (1 + Z[2][0]);
 
-				console.log("Tx: " + Tx);
-				console.log("Ty: " + Ty);
+				//console.log("Tx: " + Tx);
+				//console.log("Ty: " + Ty);  // CUA: hago log de 'moveTo' en lugar de 'lineTo'
+
+				Tx = linealTransformation(Tx, escala, centro.x);
+			  	Ty = linealTransformation(Ty, escala, centro.y);
 			}
 
 			switch(Action[i]){
 				case "Move":
 					ctx.moveTo(Tx, Ty);
+					console.log(`ctx.moveTo(${Tx},${Ty})`)
 					break;
 
 				case "Draw":
 					ctx.lineTo(Tx, Ty);
+					console.log(`ctx.lineTo(${Tx},${Ty})`)
 					break;
 
 				case "Black":
 					ctx.strokeStyle = "Black";		//Pinta los bordes del polígono
 					ctx.stroke();
 					ctx.beginPath();
+					console.log(`Black == ctx.stroke() ; ctx.beginPath()`)
 					break;
 
 				case "Blue":
 					ctx.strokeStyle = "Blue";
 					ctx.stroke();
 					ctx.beginPath();
+					console.log(`Blue == ctx.stroke() ; ctx.beginPath()`)
 					break;
 
 				case "Red":
 					ctx.strokeStyle = "Red";
 					ctx.stroke();
 					ctx.beginPath();
+					console.log(`Red == ctx.stroke() ; ctx.beginPath()`)
 					break;
 
 				case "Yellow":
 					ctx.strokeStyle = "Yellow";
 					ctx.stroke();
 					ctx.beginPath();
+					console.log(`Yellow: == ctx.stroke() ; ctx.beginPath()`)
 					break;
+				default :
+					throw RangeError(`Action[${i}] has an incorrect value`)
 			}
 		}
 	}
@@ -280,9 +333,9 @@
 
 	function ReplicatePatern(InitialTransformation, Layerdiff, Adyacency){
 		let
-		RotateCenter,
-		RotateVertex,
-		//Tr,																						/// Esta variable está definida en el artículo de 1981
+		//RotateCenter,
+		//RotateVertex,
+		//Tr,						/// Esta variable está definida en el artículo de 1981
 		i, j,
 		ExposedEdges = 0,
 		PgonsPerVertex = 0;
@@ -293,34 +346,34 @@
 			if (Adyacency == "Edge"){
 				ExposedEdges = p - 3;
 
-				RotateCenter = matrixproduct(InitialTransformation,													//// Esto está en el artículo de 1986
-				matrixproduct(matrixproduct(RotateP, RotateP), RotateP));		//// InitialTransformation * RotateP ** 3
+				RotateCenter = matrixproduct(InitialTransformation,		//// Esto está en el artículo de 1986
+				matrixproduct(matrixproduct(RotateP, RotateP), RotateP));	//// InitialTransformation * RotateP ** 3
 			}
 
 			else if (Adyacency == "Vertex"){
 				ExposedEdges = p - 2;
 
-				RotateCenter = matrixproduct(InitialTransformation,													//// Esto está en el artículo de 1986
-				matrixproduct(RotateP, RotateP));														//// InitialTransformation * RotateP ** 2
+				RotateCenter = matrixproduct(InitialTransformation,		//// Esto está en el artículo de 1986
+				matrixproduct(RotateP, RotateP));				//// InitialTransformation * RotateP ** 2
 			}
 
-			/*RotateCenter = matrixproduct(									///RotateP * RotateP * InitialTransformation
-				matrixproduct(RotateP, RotateP),							/// Esto está en el artículo de 1981
+			/*RotateCenter = matrixproduct(						///RotateP * RotateP * InitialTransformation
+				matrixproduct(RotateP, RotateP),				/// Esto está en el artículo de 1981
 				InitialTransformation);*/
 
 			for (i = 0; i < ExposedEdges; i++){
-				//Tr = matrixproduct(RotateEdge, RotateCenter);					/// Esto está en el artículo de 1981
+				//Tr = matrixproduct(RotateEdge, RotateCenter);			/// Esto está en el artículo de 1981
 				RotateVertex = matrixproduct(RotateCenter, RotateQ);		/// Esto está en el artículo de 1986
 
-				//ReplicatePatern(Tr, Layerdiff - 1, "Edge");								/// Esto está en el artículo de 1981
-				ReplicatePatern(RotateVertex, Layerdiff - 1, "Edge");				/// Esto está en el artículo de 1986
+				//ReplicatePatern(Tr, Layerdiff - 1, "Edge");			/// Esto está en el artículo de 1981
+				ReplicatePatern(RotateVertex, Layerdiff - 1, "Edge");		/// Esto está en el artículo de 1986
 
-				//RotateCenter = matrixproduct(RotateP, RotateCenter);			/// Esto está en el artículo de 1981
+				//RotateCenter = matrixproduct(RotateP, RotateCenter);		/// Esto está en el artículo de 1981
 
-				if (i < ExposedEdges - 1)									//// El -1 es para compensar que la i empieza en 0
+				if (i < ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 3;
 
-				else if (i == ExposedEdges - 1)						//// El -1 es para compensar que la i empieza en 0
+				else if (i == ExposedEdges - 1)					//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 4;
 
 				RotateVertex = matrixproduct(RotateQ, RotateP);
@@ -335,7 +388,7 @@
 			}*/
 
 			for(j = 0; j < PgonsPerVertex; j++){
-				RotateVertex = matrixproduct(RotateVertex, RotateQ);	//
+				RotateVertex = matrixproduct(RotateVertex, RotateQ);	
 				ReplicatePatern(RotateVertex,
 					Layerdiff - 1,
 					"Vertex");
@@ -375,12 +428,12 @@
 
 					case "Black":
 						ctx.strokeStyle = "Black";		//Pinta los bordes del polígono
-						ctx.stroke();									/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
+						ctx.stroke();	/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
 						break;
 
 					case "Red":
 						ctx.strokeStyle = "Red";		//Pinta los bordes del polígono
-						ctx.stroke();								/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
+						ctx.stroke();		/// Aun poniéndolo así, los dos segmentos salen rojos, el último color es rojo
 						break;
 
 					case "Draw2":
@@ -401,72 +454,101 @@
 
 	//draw();
 
-	 ///
-	 // Definición de los vectores X, Y y Action
-	 ///
 
-	 var puntos = {x0: 2.7, y0: -1.3, x1: 4.5, y1: -.45,
-		 						 x2: 5.4, y2: 2, x3: 4.9, y3: 1.75,
-							 	 x4: 2.49, y4: 1.85, x5: 2.4, y5:.8},
-	centro = {x: 600, y: 350},
-	escala = 20;
 
-// Enlace de Geogebra para ver los puntos originales
-// https://www.geogebra.org/geometry/wcx98k6u
 
-		// Los vectores X e Y toman los puntos que están definidos en Geogebra, les aplica la escala y los traslada al centro
- 	 var X = [puntos.x0 * escala + centro.x, puntos.x1 * escala + centro.x,
-		 puntos.x2 * escala + centro.x, puntos.x3 * escala + centro.x,
-		 puntos.x4 * escala + centro.x, puntos.x5 * escala + centro.x],
- 	     Y = [puntos.y0 * escala + centro.y, puntos.y1 * escala + centro.y,
-		 puntos.y2 * escala + centro.y, puntos.y3 * escala + centro.y,
-		 puntos.y4 * escala + centro.y, puntos.y5 * escala + centro.y],
- 	 Action = ["Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		  "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		  "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		  "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		  "Move", "Draw", "Draw", "Draw", "Move", "Draw",
- 		  "Move", "Draw", "Draw", "Draw", "Move", "Draw", "Black"];
+//*******************************************************************************************
+// función principal (la introduzco para poder poner 'return' antes de que acabe)
 
-	 /// Añado las rotaciones a los vectores X e Y
-	 for (var i = 1; i < p; i++){
-		 for (var j = 0; j < 6; j++){
-			 var puntoRotado = rotatePoint(X[j], Y[j], Math.PI / 3 * i, centro);
+function main()
+{
+	console.log(`main(): p == ${p}`)
+
+	// Le añado un (0,0) a los puntos puesto que cuando llegue a este punto se eligirá el color
+	X.push(0);
+	Y.push(0);
+	Action.push("Black")  // CUA: mejor adoptar política siempre tres 'Push' paralelos
+
+	ctx.beginPath();
+
+
+
+	if ( X.length != Y.length || X.length != Action.length )
+		throw RangeError(`las longitudes de X/Y/Action no coinciden, están mal definidas`)
+
+	console.log(`X.length == ${X.length}, p == ${p}`)
+
+	const long_X_orig = X.length;
+
+	 /// Añado las rotaciones a los vectores X e Y (y Action)
+	 for ( let i = 1; i < p; i++){   // cambiar 'var' por 'let'
+		 for ( let  j = 0; j < long_X_orig; j++){     // CUA usar 'X.length' en lugar de exactamente '6'
+			 let puntoRotado = {x:0, y:0};	      // En lugar de dejarlo como const lo he puesto con let, 
+			 				      // así si se añade color el punto sería (0,0), antes, con estas
+			 				      // condiciones salían números extraños (no se usaban, pero 
+			 				      // lo veo mejor así).
+
+			 if (j != long_X_orig - 1)	// Cuando j == long_X_orig - 1	se añade el color al Action	
+			 	puntoRotado = rotatePoint(X[j], Y[j], Math.PI / 3 * i, centro0);  // const en lugar de 'var'
+
 			 X.push(puntoRotado.x);
 			 Y.push(puntoRotado.y);
+			 Action.push(Action[j]) ; //  CUA: mejor adoptar política siempre tres 'Push' paralelos
 		 }
 	 }
 
-	 // Le añado un (0,0) a los puntos puesto que cuando llegue a este punto se eligirá el color
-	 X.push(0);
-	 Y.push(0);
-	 ctx.beginPath();
+	 DrawPgonPattern(Identity);
+	//return ;
 
-	 RotateCenter = Identity;
 
-   for(var i = 0; i < p; i++){
-		Tr = matrixproduct(RotateEdge, RotateCenter);
-		console.log("Matriz a aplicar al ReplicatePatern");
-		console.log(Tr);
 
-		ReplicatePatern(Tr, nLayers - 1, "Edge");
 
-		RotateCenter = matrixproduct(RotateP, RotateCenter);
-		RotateVertex = matrixproduct(RotateQ, RotateP);
+		if (nLayers > 0){		/// Para poder dibujar solo la primera capa (la capa 0)
+		 /*RotateCenter = Identity;
 
-		for (var j = 0; j < q - 3; j++){
-				ReplicatePatern(
-					matrixproduct(RotateVertex, Tr),
-					nLayers - 1,
-					"Vertex");
+	   for (var i = 0; i < p; i++){
+			Tr = matrixproduct(RotateEdge, RotateCenter);
+			console.log("Matriz a aplicar al ReplicatePatern");
+			console.log(Tr);
 
-			RotateVertex = matrixproduct(RotateQ, RotateVertex);
+			ReplicatePatern(Tr, nLayers - 1, "Edge");
+
+			RotateCenter = matrixproduct(RotateP, RotateCenter);
+			RotateVertex = matrixproduct(RotateQ, RotateP);
+
+			for (var j = 0; j < q - 3; j++){
+					ReplicatePatern(
+						matrixproduct(RotateVertex, Tr),
+						nLayers - 1,
+						"Vertex");
+
+				RotateVertex = matrixproduct(RotateQ, RotateVertex);
+			}
+		}*/	// Artículo de 1981
+
+		RotateCenter = Identity;
+
+		for (let i = 0; i < p; i++){
+			RotateVertex = matrixproduct(RotateCenter, RotateQ);
+
+			ReplicatePatern(RotateVertex, nLayers - 2, "Edge");
+
+			for (let j = 0; j < q - 3; j++){
+				RotateVertex = matrixproduct(RotateVertex, RotateQ);
+				ReplicatePatern(RotateVertex, nLayers - 2, "Vertex");
+			}
+
+			RotateCenter = matrixproduct(RotateCenter, RotateP);	// Artículo de 1986
 		}
 	}
+}
 
-  DrawPgonPattern(Identity);
+//******************************************************************
+// llamada a la función principal
 
-	</script>
+main()
+
+
+</script>
 </body>
 </html>
-
