--- a/TFG.html
+++ b/TFG.html
@@ -274,7 +274,7 @@
 				else if (i == ExposedEdges - 1)						//// El -1 es para compensar que la i empieza en 0
 					PgonsPerVertex = q - 4;
 
-				RotateVertex = matrixproduct(RotateQ, RotateP);
+				//RotateVertex = matrixproduct(RotateQ, RotateP);
 
 				/*for(j = 0; j < PgonsPerVertex; j++){				/// Este for es el del artículo de 1981
 					ReplicatePatern(
